# ada-sub

./: .env.example  .gitignore  README.md  pyproject.toml
ada_sub/: __init__.py  config.py  mcp_server.py  worker.py
ada_sub/executors/: __init__.py  base.py  lmstudio.py  subprocess_executor.py
ada_sub/queue/: __init__.py  client.py  messages.py
ada_sub/tasks/: __init__.py  models.py  registry.py
cloud/: Dockerfile  publisher.py  railway.json  receiver.py
